--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -19,7 +19,7 @@
                     <li class="active-pro">
                         <a ng-click="logout()">
                             <i class="material-icons">error</i>
-                            <p>Reportar un error (logout)</p>
+                            <p>Logout</p>
                         </a>
                     </li>
                 </ul>
@@ -45,56 +45,6 @@
                                 <li ng-class="stepClasses[4]" ng-show="user.anores>=4"><a ng-click="changeToStep(5)">R4</a></li>
                             </ol>
                         </div>
-                    </div>
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">dashboard</i>
-                                    <p class="hidden-lg hidden-md">Dashboard</p>
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">notifications</i>
-                                    <span class="notification">5</span>
-                                    <p class="hidden-lg hidden-md">Notifications</p>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#"><i class="material-icons text-warning">whatshot</i><span style="opacity: 0">__</span>5 días seguidos - estás en llamas!</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="material-icons text-success">new_releases</i></i><span style="opacity: 0">__</span>Hay nuevos objetivos a completar</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="material-icons text-info">location_on</i><span style="opacity: 0">__</span>Tarea completada en una nuevo lugar</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="material-icons text-danger">watch_later</i><span style="opacity: 0">__</span>Una meta termina pronto</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="material-icons text-muted">thumbs_up_down</i><span style="opacity: 0">__</span>Califica tu mentor</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a  class="dropdown-toggle" data-toggle="dropdown" ng-click="subirDirectrices()">
-                                    <i class="material-icons">person</i>
-                                    <p class="hidden-lg hidden-md">Profile</p>
-                                </a>
-                            </li>
-                        </ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group  is-empty">
-                                <input type="text" class="form-control" placeholder="Buscar">
-                                <span class="material-input"></span>
-                            </div>
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                                <i class="material-icons">search</i>
-                                <div class="ripple-container"></div>
-                            </button>
-                        </form>
                     </div>
                 </div>
             </nav>
@@ -191,7 +141,7 @@
                                         </div>
                                         <div class="card-footer">
                                             <div class="stats">
-                                                Cirugías al mes
+                                                Cirugías al año
                                             </div>
                                         </div>
                                     </div>
