--- a/app/assets/pages/table/table.html
+++ b/app/assets/pages/table/table.html
@@ -15,9 +15,9 @@
                     </a>
                 </li>       
                 <li class="active-pro">
-                    <a href="#">
+                    <a ng-click="logout()">
                         <i class="material-icons">error</i>
-                        <p>Reportar un error</p>
+                        <p>Logout</p>
                     </a>
                 </li>
             </ul>
@@ -35,59 +35,6 @@
                     </button>
                     <a class="navbar-brand" href="#"> Bitácora </a>
                 </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="material-icons">dashboard</i>
-                                <p class="hidden-lg hidden-md">Dashboard</p>
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                            <a  class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="material-icons">notifications</i>
-                                <span class="notification">5</span>
-                                <p class="hidden-lg hidden-md">Notifications</p>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a ><i class="material-icons text-warning">whatshot</i><span style="opacity: 0">__</span>5 días seguidos - estás en llamas!</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="material-icons text-success">new_releases</i></i><span style="opacity: 0">__</span>Hay nuevos objetivos a completar</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="material-icons text-info">location_on</i><span style="opacity: 0">__</span>Tarea completada en una nuevo lugar</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="material-icons text-danger">watch_later</i><span style="opacity: 0">__</span>Una meta termina pronto</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="material-icons text-info">thumbs_up_down</i><span style="opacity: 0">__</span>Califica tu mentor</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="material-icons">person</i>
-                                <p class="hidden-lg hidden-md">Profile</p>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <a href="#"><i class="material-icons">power_settings_new</i>Cerrar sesión</a>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="navbar-form navbar-right" role="search">
-                        <div class="form-group  is-empty">
-                            <input type="text" class="form-control" placeholder="Search">
-                            <span class="material-input"></span>
-                        </div>
-                        <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                            <i class="material-icons">search</i>
-                            <div class="ripple-container"></div>
-                        </button>
-                    </form>
-                </div>
             </div>
         </nav>
         <div class="content">
@@ -102,11 +49,11 @@
                             <div class="card-content table-responsive">
                                 <table class="table">
                                     <thead class="text-primary">
-                                        <th>Cirugías</th>
-                                        <th>Identificación del paciente</th>
-                                        <th>Iniciales del Paciente</th>
-                                        <th>Fecha</th>
-                                        <th>Complicaiones</th>
+                                        <th ng-click="setOrder('cirugia')">Cirugías</th>
+                                        <th ng-click="setOrder('nombrePaciente')">Identificación del paciente</th>
+                                        <th ng-click="setOrder('identificacion')">Iniciales del Paciente</th>
+                                        <th ng-click="setOrder('fecha')">Fecha</th>
+                                        <th ng-click="setOrder('complicaciones')">Complicaiones</th>
                                     </thead>
                                     <tbody>
                                         <tr ng-repeat="(key, entrada) in entradas | filter: filtroEntradas | orderBy: orderFcn:true | limitTo: 50" ng-if="entradas.length>0" >
