termine las estadisticas

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,17 @@
       messagingSenderId: "331764203402"
     };
     firebase.initializeApp(config);
+
+    
+    // var config = {
+    //   apiKey: "AIzaSyBdDLPX9W17ahGIrP4G0JmDmdaazpwu-04",
+    //   authDomain: "logbook-ab4f3.firebaseapp.com",
+    //   databaseURL: "https://logbook-ab4f3.firebaseio.com",
+    //   projectId: "logbook-ab4f3",
+    //   storageBucket: "logbook-ab4f3.appspot.com",
+    //   messagingSenderId: "925060344526"
+    // };
+    // firebase.initializeApp(config);
   </script>
 	
 </head>
