--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -171,7 +171,7 @@
                     <!-- Statistics -->
                     <div class="row">
                         
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-xl-4 col-lg-6">
                             <div class="card">
                                 <div class="card-content">
                                     <div class="myGraph">
@@ -192,7 +192,7 @@
                                 </div> -->
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-xl-4 col-lg-6">
                             <div class="card">
                                 <!-- <div class="card-header" data-background-color="red">
                                     <h4 class="title">Por tipo</h4>
