--- a/app/index.html
+++ b/app/index.html
@@ -49,26 +49,26 @@
 
    <script>
     // Initialize Firebase en base de datos de PRUEBA!!
-    // var config = {
-    //   apiKey: "AIzaSyBY4pyhL6cEfHncCReGAptG63G9k_Wt5T4",
-    //   authDomain: "logbook-pruebas.firebaseapp.com",
-    //   databaseURL: "https://logbook-pruebas.firebaseio.com",
-    //   projectId: "logbook-pruebas",
-    //   storageBucket: "logbook-pruebas.appspot.com",
-    //   messagingSenderId: "331764203402"
-    // };
-    // firebase.initializeApp(config);
-
-    
     var config = {
-      apiKey: "AIzaSyBdDLPX9W17ahGIrP4G0JmDmdaazpwu-04",
-      authDomain: "logbook-ab4f3.firebaseapp.com",
-      databaseURL: "https://logbook-ab4f3.firebaseio.com",
-      projectId: "logbook-ab4f3",
-      storageBucket: "logbook-ab4f3.appspot.com",
-      messagingSenderId: "925060344526"
+      apiKey: "AIzaSyBY4pyhL6cEfHncCReGAptG63G9k_Wt5T4",
+      authDomain: "logbook-pruebas.firebaseapp.com",
+      databaseURL: "https://logbook-pruebas.firebaseio.com",
+      projectId: "logbook-pruebas",
+      storageBucket: "logbook-pruebas.appspot.com",
+      messagingSenderId: "331764203402"
     };
     firebase.initializeApp(config);
+
+    
+    // var config = {
+    //   apiKey: "AIzaSyBdDLPX9W17ahGIrP4G0JmDmdaazpwu-04",
+    //   authDomain: "logbook-ab4f3.firebaseapp.com",
+    //   databaseURL: "https://logbook-ab4f3.firebaseio.com",
+    //   projectId: "logbook-ab4f3",
+    //   storageBucket: "logbook-ab4f3.appspot.com",
+    //   messagingSenderId: "925060344526"
+    // };
+    // firebase.initializeApp(config);
   </script>
 	
 </head>
