--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
 
 	<script src="assets/js/app.js"></script>
   <script src="assets/js/services/errorhandler.js"></script>
+  <script src="assets/js/services/objectiveserv.js"></script>
 	<script src="assets/js/constants/menu.js"></script>
   <script src="assets/js/constants/cirugias.js"></script>
   <script src="assets/js/constants/directrices.js"></script>
