agregué la pagina de bienvenida

--- a/app/assets/pages/objectives/objectives.html
+++ b/app/assets/pages/objectives/objectives.html
@@ -96,6 +96,7 @@
                             <div class="stats">
                                 Entre R{{objetivo.fechas.start}} y R{{objetivo.fechas.end}}
                             </div>
+                            <a class="pull-right">ver detalles</a>
                         </div>
                     </div>
                 </div>
