--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
   <script src="assets/pages/detail/detail.js"></script>
   <script src="assets/pages/objectives/objectives.js"></script>
   <script src="assets/pages/error/error.js"></script>
+  <script src="assets/pages/welcome/welcome.js"></script>
 
 
 	
