--- a/public/app/assets/pages/welcome/welcome.html
+++ b/public/app/assets/pages/welcome/welcome.html
@@ -112,6 +112,9 @@
 						</div>
 					</div>
 				</div>
+				<div class="row">
+					<p>designed by Freepik from Flaticon</p>
+				</div>
 			</div>
         </div>
     </div>
