--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
 	<script src="assets/pages/profile/profile.js"></script>
 	<script src="assets/pages/entry/entry.js"></script>
   <script src="assets/pages/detail/detail.js"></script>
+  <script src="assets/pages/detailobj/detailobj.js"></script>
   <script src="assets/pages/objectives/objectives.js"></script>
   <script src="assets/pages/error/error.js"></script>
   <script src="assets/pages/welcome/welcome.js"></script>
