--- a/app/assets/pages/detail/detail.html
+++ b/app/assets/pages/detail/detail.html
@@ -32,7 +32,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#!/bitacora"> DETALLES </a>
+                    <a class="navbar-brand breadcrumb"> DETALLES </a>
                 </div>
             </div>
         </nav>
@@ -56,7 +56,7 @@
                         <div class="row">
                             <div class="card card-stats">
                                 <div class="card-header" data-background-color="blue">
-                                    <h3>{{entrada.nombrePaciente}} - {{entrada.identificacion}}</h3> 
+                                    <h3>{{entrada.identificacion}}</h3> 
                                 </div>
                                 <div class="card-content">
                                     <div class="row" ng-show="modeEdit">
