--- a/app/assets/pages/profile/profile.html
+++ b/app/assets/pages/profile/profile.html
@@ -32,7 +32,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"> Perfil </a>
+                <a class="navbar-brand breadcrumb" > Perfil </a>
+
             </div>
         </div>
     </nav>
@@ -187,7 +188,7 @@
                         </div>
                         <div class="card-footer">
                             <div class="stats">
-                                <i class="material-icons text-success">playlist_add</i> <a ng-click="addNew('qx')" data-toggle="modal" data-target=".bd-example-modal-lg">Agregar procedimientos</a>
+                                <i class="material-icons text-success">playlist_add</i> <a ng-click="addNew('qx')" data-toggle="modal" data-target="#modalFav">Agregar procedimientos</a>
                             </div>
                         </div>
                     </div>
@@ -208,7 +209,7 @@
                         </div>
                         <div class="card-footer">
                             <div class="stats">
-                                <i class="material-icons text-success">playlist_add</i> <a ng-click="addNew('dx')" data-toggle="modal" data-target=".bd-example-modal-lg">Agregar diagnósticos</a>
+                                <i class="material-icons text-success">playlist_add</i> <a ng-click="addNew('dx')" data-toggle="modal" data-target="#modalFav">Agregar diagnósticos</a>
                             </div>
                         </div>
                     </div>
@@ -219,7 +220,7 @@
 </div>
 
 <!-- Modal Add -->
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" id="modalFav" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="col-sm-12">
