--- a/app/assets/pages/detailobj/detailobj.html
+++ b/app/assets/pages/detailobj/detailobj.html
@@ -39,7 +39,7 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-4">
                         <div class="card card-stats">
                             <div class="card-header" data-background-color="orange" ng-if="objetivo.status == 'pendiente'">
                                 <i class="fa fa-hourglass-half"></i>
@@ -51,9 +51,7 @@
                             	<div class="row justify-content-md-center">
                             	    <div class="col-sm-12 col-md-10 text-left">
                             			<h3 class="title" style="border-bottom: 1px solid grey">{{objetivo.nombre}}</h3>
-                            			<p class="category">Nombre</p>
-                            			<h6 class="title" style="border-bottom: 1px solid grey" ng-if="objetivo.descripcion">{{objetivo.descripcion}}</h6>
-                            			<p class="category" ng-if="objetivo.descripcion">Descripción</p>
+                            			<p class="" style="border-bottom: 1px solid grey" ng-if="objetivo.descripcion">{{objetivo.descripcion}}</p>
                             			<h3 class="title" style="border-bottom: 1px solid grey">{{objetivo.status}}</h3>
                             			<p class="category">Estatus</p>
                             			<h3 class="title" style="border-bottom: 1px solid grey">{{objetivo.tipo}}</h3>
@@ -78,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-9">
+                    <div class="col-lg-8">
                     	<div class="card">
                     	    <div class="card-header" data-background-color="green">
                     	        <h4 class="title">Entradas</h4>
